--- a/basic_routines/tree/sequential_tree/11.sequence_tree.cbp
+++ b/basic_routines/tree/sequential_tree/11.sequence_tree.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/11.sequence_tree" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/11" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/11.sequence_tree" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/11" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -33,6 +33,8 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="main.cpp" />
+		<Unit filename="seq_bi_tree.cpp" />
+		<Unit filename="seq_bi_tree.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
